# docs/swagger.yml
@@ -131,6 +131,27 @@ paths:
           description: OK
         '400':
           description: ERROR
+  /customer/login:
+    post:
+        tags:
+          - Customer
+        description: Login Customer
+        requestBody:
+          required: true
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  email:
+                    type: string
+                  password:
+                    type: string
+        responses:
+          '200':
+            description: OK
+          '400':
+            description: ERROR
   /customer/id/{id}:
     get:
       tags:
