# src/routes/customer-route.js
@@ -4,8 +4,11 @@ const express = require('express');
 const router = express.Router();
 const controller = require('../controllers/customer-controller');
 
-router.get('/', controller.getAll);
 router.get('/id/:id', controller.getById);
+router.get('/', controller.getAll);
+router.get('/', controller.getAll);
 router.post('/', controller.post);
+router.post('/login', controller.login);
+
 
 module.exports = router;
